crates/stayhydated-dioxus-core/tests/ui/project_option_string_id.stderr
error[E0308]: mismatched types
 --> tests/ui/project_option_string_id.rs:5:13
  |
5 |         id: "stayhydated",
  |             ^^^^^^^^^^^^^ expected `ProjectId`, found `&str`
  |
help: call `Into::into` on this expression to convert `&'static str` into `ProjectId`
  |
5 |         id: "stayhydated".into(),
  |                          +++++++
